<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48B0BD"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:gravity="center"
        android:orientation="horizontal">

        <dl.useless.minesweep.gameview.MineSweepView
            android:id="@+id/mineView"
            android:layout_width="400dp"
            android:layout_height="400dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_toggle"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/fStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags_count"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_restart"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnToggle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_toggle_mode"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/button_submit"
            android:textSize="15dp" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/good_luck_and_have_fun"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
    </com.facebook.shimmer.ShimmerFrameLayout>


</LinearLayout>